// These are the messages that get persisted - the events, plus the current state for snapshots.
syntax = "proto3";

// change this to reflect your organization and project namespace
package org.justinhj.raidbossservice.persistence;

option go_package = "persistence";

// Leaderboard entry
message LeaderboardEntry {
  string player_id = 1 ;
  int64 score = 2 ;
}

// Data model for snapshots
message RaidBossInstance {
  string boss_instance_id = 1 ;
  string boss_def_id = 2 ;
  int64 health = 3 ;
  repeated LeaderboardEntry leaderboard = 4 ;
  int64 created = 5 ;
  int64 updated = 6 ;
  string group_id = 7 ;
  string killed_by = 8 ;
}

message RaidBossCreated {
    RaidBossInstance instance = 1 ;
}
