// This is the public API offered by the raid boss entity
syntax = "proto3";

//import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";
import "cloudstate/eventing.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package org.justinhj.raidbossservice;

// A command to create (summon) a raid boss
// Note the use of the cloudstate.entity_key field option extension, 
// this is used to indicate which field(s) form the entity key, which 
// the Akka backend will use to identify entities and shard them
// (in this example  `boss_instance_id` ).

message RaidBossCreate {
    string boss_instance_id = 1 [(.cloudstate.entity_key) = true];
    string id = 2;
    string name = 3;
    int32 quantity = 4;
}

message RaidBossView {
  string boss_instance_id = 1 [(.cloudstate.entity_key) = true];
}

// Leaderboard entry
message LeaderboardEntry {
  string playerId = 1 ;
  int64 score = 2 ;
}

// Raidboss instance
message RaidBossInstance {
  string instanceId = 1 ;
  string bossDefId = 2 ;
  int64 health = 3 ;
  repeated LeaderboardEntry leaderboard = 4 ;
  google.protobuf.Timestamp created = 5 ;
  google.protobuf.Timestamp updated = 6 ;
  string groupId = 7 ;
  string killedBy = 8 ;
}

// The enitty state is represented as a list of the above data items.
// You should edit this so that it reflects your own state.
message RaidBossState {
    RaidBossInstance instance = 1;
}

// Service definition
service RaidBossService {

  // Create (or summon) a boss
  rpc CreateRaidBoss(RaidBossCreate) returns (RaidBossInstance) {
    // option (google.api.http) specifies that this method is a gRPC HTTP mapping annotation
    // for more info see: https://cloud.google.com/endpoints/docs/grpc/transcoding
    option (google.api.http) = {
      post: "/state/{raidboss_instance_id}/raidbosses/create",
      body: "*",
    };
  }

  // Call to return the state from an entity.
  rpc ViewRaidBoss(RaidBossView) returns (RaidBossInstance) {
    // option (google.api.http) specifies that this method is a gRPC HTTP mapping annotation
    // for more info see: https://cloud.google.com/endpoints/docs/grpc/transcoding
    option (google.api.http) = {
      get: "/state/{raidboss_instance_id}"
    };
  }
}
